 - [ZBX-1357] updated French, Latvian, Polish, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
 - [ZBX-2756] renamed macro {TRIGGER.KEY<1-9>} to {ITEM.KEY<1-9>} (asaveljevs)
 - [ZBXNEXT-511] renamed item description to name, for description introduced a new field (asaveljevs, Vedmak)

Bug fixes:
 - [ZBX-954] typo in constant name, cause error when try to clear item history (Vedmak)
 - [ZBX-3769] fixed applications unlinked when update item prototypes (Vedmak)
 - [ZBX-3678] fixed unlinking template with action triggers (Vedmak)
 - [ZBX-3758] made Zabbix daemons remove their PID file upon unsuccessful startup (asaveljevs)
 - [ZBX-3791] fixed item form caption after cloning item (Vedmak)
 - [ZBX-3689] fixed error when adding a new second-level IT Service (Alexei)
 - [ZBX-3715] improve frontend message style & grammar (Richlv)
 - [ZBX-3767] improve import status messages by avoiding concatenating individual words; thanks to zalex (Richlv)
 - [ZBX-3704] added default condition trigger value = problem for new actions (Vedmak)
 - [ZBX-3729] fixed server crash when failing to resolve interface-related macros in item keys (asaveljevs)
 - [ZBX-2885] fixed 00:00-23:59 vs. 00:00-24:00 inconsistency for periods (dimir)
 - [ZBX-3687] fixed link color for lld rules (Vedmak)
 - [ZBX-3709] fixed agree checkbox in setup (Vedmak)
 - [ZBX-3658] fixed the whole request to Java proxy failing if it contains an invalid key (asaveljevs)
 - [ZBX-3657] fixed errors while updating proxy configuration data (Sasha)
 - [ZBX-3656] fixed item filter by data type boolean (Vedmak)
 - [ZBX-3620] fixed error when delete application used in webscenario (Vedmak)

--------------------------------------------------------------------------------
Changes for 1.9.3

New features:
 - [ZBXNEXT-555] added remote monitoring of JMX counters through Java proxy (asaveljevs,Vedmak,Vlad)
 - [ZBXNEXT-651] added "Boolean" data type for integer item value type (asaveljevs,Vedmak,Vlad)