@@ -11,6 +11,7 @@ New features:
  - [ZBXNEXT-511] renamed item description to name, for description introduced a new field (asaveljevs, Vedmak)
 
 Bug fixes:
+ - [ZBX-3809] fixed overwriting of existing elements and links when importing a map (Alexei)
  - [ZBX-954] typo in constant name, cause error when try to clear item history (Vedmak)
  - [ZBX-3769] fixed applications unlinked when update item prototypes (Vedmak)
  - [ZBX-3678] fixed unlinking template with action triggers (Vedmak)
